# order_management

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml  scheduler_export.py
CSV_Exports/: orders_2026-03-03_16-57-42_data.csv  orders_2026-03-03_19-42-00_data.csv  orders_2026-03-03_19-51-00_data.csv  orders_2026-03-03_19-54-00_data.csv
alembic/: env.py
alembic/versions/: 432f8ea621e7_initial_migration.py
app/: celery_worker.py  customer_worker.py  order_worker.py  product_worker.py
project/customer/: api.py  models.py  service.py  task.py  validation.py
project/olap/: models.py
project/olap/dim_customer/: api.py  apscheduler.py  models.py  service.py
project/olap/dim_order/: export_csv.py  service.py
project/orders/: api.py  models.py  service.py  validation.py
project/product/: api.py  api2.py  models.py  service.py  service2.py  validation.py  validation2.py
